--- a/.github/workflows/tagtransmission_integration_test.yml
+++ b/.github/workflows/tagtransmission_integration_test.yml
@@ -122,4 +122,58 @@ jobs:
         uses: ./.github/actions/common/tag-transmission
       - name: tag transmission test for httpClientVersion=${{ matrix.httpClientVersion }}
         if: env.enableTagTransmission == 'true'
-        uses: ./.github/actions/scenarios/spring/router/spring-router
+        uses: ./.github/actions/scenarios/tag-transmission/httpclientv3
+  test-for-tag-transmission-httpclient4.x:
+    name: Test for tag transmission httpclient4.x
+    runs-on: ubuntu-latest
+    needs: [build-agent-and-cache, download-midwares-and-cache]
+    strategy:
+      matrix:
+        include:
+          - httpClientVersion: "4.0.3"
+          - httpClientVersion: "4.1.3"
+          - httpClientVersion: "4.2.6"
+          - httpClientVersion: "4.3.6"
+          - httpClientVersion: "4.4.1"
+          - httpClientVersion: "4.5.14"
+      fail-fast: false
+    steps:
+      - uses: actions/checkout@v3
+        with:
+          fetch-depth: 100
+      - name: set java version to environment
+        run: |
+          echo "javaVersion=8" >> $GITHUB_ENV
+      - name: common operations
+        uses: ./.github/actions/common/tag-transmission
+      - name: tag transmission test for httpClientVersion=${{ matrix.httpClientVersion }}
+        if: env.enableTagTransmission == 'true'
+        uses: ./.github/actions/scenarios/tag-transmission/httpclientv4
+  test-for-tag-transmission-okhttp:
+    name: Test for tag transmission okhttp
+    runs-on: ubuntu-latest
+    needs: [build-agent-and-cache, download-midwares-and-cache]
+    strategy:
+      matrix:
+        include:
+          - okHttpVersion: "2.0.0"
+          - okHttpVersion: "2.1.0"
+          - okHttpVersion: "2.2.0"
+          - okHttpVersion: "2.3.0"
+          - okHttpVersion: "2.4.0"
+          - okHttpVersion: "2.5.0"
+          - okHttpVersion: "2.6.0"
+          - okHttpVersion: "2.7.5"
+      fail-fast: false
+    steps:
+      - uses: actions/checkout@v3
+        with:
+          fetch-depth: 100
+      - name: set java version to environment
+        run: |
+          echo "javaVersion=8" >> $GITHUB_ENV
+      - name: common operations
+        uses: ./.github/actions/common/tag-transmission
+      - name: tag transmission test for okHttpVersion=${{ matrix.okHttpVersion }}
+        if: env.enableTagTransmission == 'true'
+        uses: ./.github/actions/scenarios/tag-transmission/okhttp
