--- a/.github/actions/common/tag-transmission/action.yml
+++ b/.github/actions/common/tag-transmission/action.yml
@@ -54,7 +54,7 @@ runs:
       shell: bash
       run: |
         tar -zxf kafka_2.13-2.7.0.tgz
-        bash nohup kafka_2.13-2.7.0/bin/kafka-server-start.sh kafka_2.13-2.7.0/config/server.properties &
+        nohup bash kafka_2.13-2.7.0/bin/kafka-server-start.sh kafka_2.13-2.7.0/config/server.properties &
     - name: download rocketmq
       uses: actions/cache@v3
       with:
@@ -67,12 +67,12 @@ runs:
       run: |
         unzip rocketmq-all-4.8.0-source-release.zip
         sed -i 's/-Xms4g -Xmx4g -Xmn2g/-Xms1g -Xmx1g -Xmn1g/g' rocketmq-all-4.8.0-source-release/bin/runserver.sh
-        bash nohup rocketmq-all-4.8.0-source-release/bin/mqnamesrv.sh &
+        nohup bash rocketmq-all-4.8.0-source-release/bin/mqnamesrv.sh &
     - name: start rocketmq broker
       shell: bash
       run: |
         sed -i 's/-Xms8g -Xmx8g -Xmn4g/-Xms1g -Xmx1g -Xmn1g/g' rocketmq-all-4.8.0-source-release/bin/runbroker.sh
-        bash nohup rocketmq-all-4.8.0-source-release/bin/mqbroker -n localhost:9876 &
+        nohup bash rocketmq-all-4.8.0-source-release/bin/mqbroker -n localhost:9876 &
     - name: cache dependencies
       uses: actions/cache@v3
       with:
