--- a/.github/actions/common/tag-transmission/action.yml
+++ b/.github/actions/common/tag-transmission/action.yml
@@ -55,24 +55,24 @@ runs:
       run: |
         tar -zxf kafka_2.13-2.7.0.tgz
         nohup bash kafka_2.13-2.7.0/bin/kafka-server-start.sh kafka_2.13-2.7.0/config/server.properties &
-    - name: download rocketmq
-      uses: actions/cache@v3
-      with:
-        path: rocketmq-all-4.8.0-source-release.zip
-        key: ${{ runner.os }}-rocketmq-all-4.8.0-source-release
-        restore-keys: |
-          ${{ runner.os }}-rocketmq-all-4.8.0-source-release
-    - name: start rocketmq server
-      shell: bash
-      run: |
-        unzip rocketmq-all-4.8.0-source-release.zip
-        sed -i 's/-Xms4g -Xmx4g -Xmn2g/-Xms1g -Xmx1g -Xmn1g/g' rocketmq-all-4.8.0-source-release/bin/runserver.sh
-        nohup bash rocketmq-all-4.8.0-source-release/bin/mqnamesrv.sh &
-    - name: start rocketmq broker
-      shell: bash
-      run: |
-        sed -i 's/-Xms8g -Xmx8g -Xmn4g/-Xms1g -Xmx1g -Xmn1g/g' rocketmq-all-4.8.0-source-release/bin/runbroker.sh
-        nohup bash rocketmq-all-4.8.0-source-release/bin/mqbroker -n localhost:9876 &
+#    - name: download rocketmq
+#      uses: actions/cache@v3
+#      with:
+#        path: rocketmq-all-4.8.0-source-release.zip
+#        key: ${{ runner.os }}-rocketmq-all-4.8.0-source-release
+#        restore-keys: |
+#          ${{ runner.os }}-rocketmq-all-4.8.0-source-release
+#    - name: start rocketmq server
+#      shell: bash
+#      run: |
+#        unzip rocketmq-all-4.8.0-source-release.zip
+#        sed -i 's/-Xms4g -Xmx4g -Xmn2g/-Xms1g -Xmx1g -Xmn1g/g' rocketmq-all-4.8.0-source-release/bin/runserver.sh
+#        nohup bash rocketmq-all-4.8.0-source-release/bin/mqnamesrv.sh &
+#    - name: start rocketmq broker
+#      shell: bash
+#      run: |
+#        sed -i 's/-Xms8g -Xmx8g -Xmn4g/-Xms1g -Xmx1g -Xmn1g/g' rocketmq-all-4.8.0-source-release/bin/runbroker.sh
+#        nohup bash rocketmq-all-4.8.0-source-release/bin/mqbroker -n localhost:9876 &
     - name: cache dependencies
       uses: actions/cache@v3
       with:
