--- a/.github/workflows/tagtransmission_integration_test.yml
+++ b/.github/workflows/tagtransmission_integration_test.yml
@@ -362,30 +362,30 @@ jobs:
       - name: tag transmission test for kafkaVersion=${{ matrix.kafkaVersion }}
         if: env.enableTagTransmission == 'true'
         uses: ./.github/actions/scenarios/tag-transmission/kafka
-  test-for-tag-transmission-rocketmq:
-    name: Test for tag transmission rocketmq
-    runs-on: ubuntu-latest
-    needs: [build-agent-and-cache, download-midwares-and-cache]
-    strategy:
-      matrix:
-        include:
-          - rocketMqVersion: "4.8.0"
-          - rocketMqVersion: "4.9.7"
-          - rocketMqVersion: "5.0.0"
-          - rocketMqVersion: "5.1.4"
-      fail-fast: false
-    steps:
-      - uses: actions/checkout@v3
-        with:
-          fetch-depth: 100
-      - name: set java version to environment
-        run: |
-          echo "javaVersion=8" >> $GITHUB_ENV
-      - name: common operations
-        uses: ./.github/actions/common/tag-transmission
-      - name: tag transmission test for rocketMqVersion=${{ matrix.rocketMqVersion }}
-        if: env.enableTagTransmission == 'true'
-        uses: ./.github/actions/scenarios/tag-transmission/rocketmq
+#  test-for-tag-transmission-rocketmq:
+#    name: Test for tag transmission rocketmq
+#    runs-on: ubuntu-latest
+#    needs: [build-agent-and-cache, download-midwares-and-cache]
+#    strategy:
+#      matrix:
+#        include:
+#          - rocketMqVersion: "4.8.0"
+#          - rocketMqVersion: "4.9.7"
+#          - rocketMqVersion: "5.0.0"
+#          - rocketMqVersion: "5.1.4"
+#      fail-fast: false
+#    steps:
+#      - uses: actions/checkout@v3
+#        with:
+#          fetch-depth: 100
+#      - name: set java version to environment
+#        run: |
+#          echo "javaVersion=8" >> $GITHUB_ENV
+#      - name: common operations
+#        uses: ./.github/actions/common/tag-transmission
+#      - name: tag transmission test for rocketMqVersion=${{ matrix.rocketMqVersion }}
+#        if: env.enableTagTransmission == 'true'
+#        uses: ./.github/actions/scenarios/tag-transmission/rocketmq
 #  test-for-tag-transmission-jdkhttp-jetty:
 #    name: Test for tag transmission jdkhttp and jetty
 #    runs-on: ubuntu-latest
