--- a/.github/actions/scenarios/tag-transmission/rocketmq/action.yml
+++ b/.github/actions/scenarios/tag-transmission/rocketmq/action.yml
@@ -3,6 +3,54 @@ description: "Auto test for tag transmission by rocketmq"
 runs:
   using: composite
   steps:
+    - name: Set up JDK ${{ env.javaVersion }}
+      uses: actions/setup-java@v3
+      with:
+        java-version: ${{ env.javaVersion }}
+        distribution: 'adopt'
+        cache: maven
+    - name: download zookeeper
+      uses: actions/cache@v3
+      with:
+        path: apache-zookeeper-3.6.3-bin.tar.gz
+        key: ${{ runner.os }}-apache-zookeeper-3.6.3
+    - name: run zookeeper
+      shell: bash
+      run: |
+        tar -zxf apache-zookeeper-3.6.3-bin.tar.gz
+        bash apache-zookeeper-3.6.3-bin/bin/zkServer.sh start apache-zookeeper-3.6.3-bin/conf/zoo_sample.cfg
+    - name: download rocketmq
+      uses: actions/cache@v3
+      with:
+        path: rocketmq-all-4.8.0-source-release.zip
+        key: ${{ runner.os }}-rocketmq-all-4.8.0-source-release
+        restore-keys: |
+          ${{ runner.os }}-rocketmq-all-4.8.0-source-release
+    - name: start rocketmq server
+      shell: bash
+      run: |
+        unzip rocketmq-all-4.8.0-source-release.zip
+        sed -i 's/-Xms4g -Xmx4g -Xmn2g/-Xms1g -Xmx1g -Xmn1g/g' rocketmq-all-4.8.0-source-release/bin/runserver.sh
+        nohup bash rocketmq-all-4.8.0-source-release/bin/mqnamesrv.sh &
+    - name: start rocketmq broker
+      shell: bash
+      run: |
+        sed -i 's/-Xms8g -Xmx8g -Xmn4g/-Xms1g -Xmx1g -Xmn1g/g' rocketmq-all-4.8.0-source-release/bin/runbroker.sh
+        nohup bash rocketmq-all-4.8.0-source-release/bin/mqbroker -n localhost:9876 &
+    - name: cache dependencies
+      uses: actions/cache@v3
+      with:
+        path: ~/.m2/repository
+        key: ${{ runner.os }}-maven-${{ hashFiles('**/pom.xml') }}
+        restore-keys: |
+          ${{ runner.os }}-maven-
+    - name: download agent
+      uses: actions/cache@v3
+      with:
+        path: sermant-agent-*/
+        key: ${{ runner.os }}-agent-${{ github.run_id }}
+    - name: plugin change check
+      uses: ./.github/actions/common/plugin-change-check
     - name: entry
       uses: ./.github/actions/common/entry
       with:
