--- a/.github/workflows/tagtransmission_integration_test.yml
+++ b/.github/workflows/tagtransmission_integration_test.yml
@@ -256,31 +256,31 @@ jobs:
 #      - name: tag transmission test for servicecombVersion=${{ matrix.serviceCombVersion }}
 #        if: env.enableTagTransmission == 'true'
 #        uses: ./.github/actions/scenarios/tag-transmission/servicecomb
-  test-for-tag-transmission-alibabadubbo:
-    name: Test for tag transmission alibabadubbo
-    runs-on: ubuntu-latest
-    needs: [build-agent-and-cache, download-midwares-and-cache]
-    strategy:
-      matrix:
-        include:
-          - alibabaDubboVersion: "2.6.0"
-          - alibabaDubboVersion: "2.6.3"
-          - alibabaDubboVersion: "2.6.6"
-          - alibabaDubboVersion: "2.6.9"
-          - alibabaDubboVersion: "2.6.12"
-      fail-fast: false
-    steps:
-      - uses: actions/checkout@v3
-        with:
-          fetch-depth: 100
-      - name: set java version to environment
-        run: |
-          echo "javaVersion=8" >> $GITHUB_ENV
-      - name: common operations
-        uses: ./.github/actions/common/tag-transmission
-      - name: tag transmission test for alibabaDubboVersion=${{ matrix.alibabaDubboVersion }}
-        if: env.enableTagTransmission == 'true'
-        uses: ./.github/actions/scenarios/tag-transmission/alibaba-dubbo
+#  test-for-tag-transmission-alibabadubbo:
+#    name: Test for tag transmission alibabadubbo
+#    runs-on: ubuntu-latest
+#    needs: [build-agent-and-cache, download-midwares-and-cache]
+#    strategy:
+#      matrix:
+#        include:
+#          - alibabaDubboVersion: "2.6.0"
+#          - alibabaDubboVersion: "2.6.3"
+#          - alibabaDubboVersion: "2.6.6"
+#          - alibabaDubboVersion: "2.6.9"
+#          - alibabaDubboVersion: "2.6.12"
+#      fail-fast: false
+#    steps:
+#      - uses: actions/checkout@v3
+#        with:
+#          fetch-depth: 100
+#      - name: set java version to environment
+#        run: |
+#          echo "javaVersion=8" >> $GITHUB_ENV
+#      - name: common operations
+#        uses: ./.github/actions/common/tag-transmission
+#      - name: tag transmission test for alibabaDubboVersion=${{ matrix.alibabaDubboVersion }}
+#        if: env.enableTagTransmission == 'true'
+#        uses: ./.github/actions/scenarios/tag-transmission/alibaba-dubbo
 #  test-for-tag-transmission-apachedubbo:
 #    name: Test for tag transmission apachedubbo
 #    runs-on: ubuntu-latest
@@ -362,30 +362,30 @@ jobs:
 #      - name: tag transmission test for kafkaVersion=${{ matrix.kafkaVersion }}
 #        if: env.enableTagTransmission == 'true'
 #        uses: ./.github/actions/scenarios/tag-transmission/kafka
-#  test-for-tag-transmission-rocketmq:
-#    name: Test for tag transmission rocketmq
-#    runs-on: ubuntu-latest
-#    needs: [build-agent-and-cache, download-midwares-and-cache]
-#    strategy:
-#      matrix:
-#        include:
-#          - rocketMqVersion: "4.8.0"
-#          - rocketMqVersion: "4.9.7"
-#          - rocketMqVersion: "5.0.0"
-#          - rocketMqVersion: "5.1.4"
-#      fail-fast: false
-#    steps:
-#      - uses: actions/checkout@v3
-#        with:
-#          fetch-depth: 100
-#      - name: set java version to environment
-#        run: |
-#          echo "javaVersion=8" >> $GITHUB_ENV
-#      - name: common operations
-#        uses: ./.github/actions/common/tag-transmission
-#      - name: tag transmission test for rocketMqVersion=${{ matrix.rocketMqVersion }}
-#        if: env.enableTagTransmission == 'true'
-#        uses: ./.github/actions/scenarios/tag-transmission/rocketmq
+  test-for-tag-transmission-rocketmq:
+    name: Test for tag transmission rocketmq
+    runs-on: ubuntu-latest
+    needs: [build-agent-and-cache, download-midwares-and-cache]
+    strategy:
+      matrix:
+        include:
+          - rocketMqVersion: "4.8.0"
+          - rocketMqVersion: "4.9.7"
+          - rocketMqVersion: "5.0.0"
+          - rocketMqVersion: "5.1.4"
+      fail-fast: false
+    steps:
+      - uses: actions/checkout@v3
+        with:
+          fetch-depth: 100
+      - name: set java version to environment
+        run: |
+          echo "javaVersion=8" >> $GITHUB_ENV
+      - name: common operations
+        uses: ./.github/actions/common/tag-transmission
+      - name: tag transmission test for rocketMqVersion=${{ matrix.rocketMqVersion }}
+        if: env.enableTagTransmission == 'true'
+        uses: ./.github/actions/scenarios/tag-transmission/rocketmq
 #  test-for-tag-transmission-jdkhttp-jetty:
 #    name: Test for tag transmission jdkhttp and jetty
 #    runs-on: ubuntu-latest
