--- a/.github/actions/common/tag-transmission/action.yml
+++ b/.github/actions/common/tag-transmission/action.yml
@@ -43,36 +43,18 @@ runs:
       run: |
         tar -zxf nacos-server-1.4.2.tar.gz
         bash nacos/bin/startup.sh -m standalone
-    - name: download kafka
-      uses: actions/cache@v3
-      with:
-        path: kafka_2.13-2.7.0.tgz
-        key: ${{ runner.os }}-kafka_2.13-2.7.0
-        restore-keys: |
-          ${{ runner.os }}-kafka_2.13-2.7.0
-    - name: start kafka
-      shell: bash
-      run: |
-        tar -zxf kafka_2.13-2.7.0.tgz
-        nohup bash kafka_2.13-2.7.0/bin/kafka-server-start.sh kafka_2.13-2.7.0/config/server.properties &
-#    - name: download rocketmq
+#    - name: download kafka
 #      uses: actions/cache@v3
 #      with:
-#        path: rocketmq-all-4.8.0-source-release.zip
-#        key: ${{ runner.os }}-rocketmq-all-4.8.0-source-release
+#        path: kafka_2.13-2.7.0.tgz
+#        key: ${{ runner.os }}-kafka_2.13-2.7.0
 #        restore-keys: |
-#          ${{ runner.os }}-rocketmq-all-4.8.0-source-release
-#    - name: start rocketmq server
+#          ${{ runner.os }}-kafka_2.13-2.7.0
+#    - name: start kafka
 #      shell: bash
 #      run: |
-#        unzip rocketmq-all-4.8.0-source-release.zip
-#        sed -i 's/-Xms4g -Xmx4g -Xmn2g/-Xms1g -Xmx1g -Xmn1g/g' rocketmq-all-4.8.0-source-release/bin/runserver.sh
-#        nohup bash rocketmq-all-4.8.0-source-release/bin/mqnamesrv.sh &
-#    - name: start rocketmq broker
-#      shell: bash
-#      run: |
-#        sed -i 's/-Xms8g -Xmx8g -Xmn4g/-Xms1g -Xmx1g -Xmn1g/g' rocketmq-all-4.8.0-source-release/bin/runbroker.sh
-#        nohup bash rocketmq-all-4.8.0-source-release/bin/mqbroker -n localhost:9876 &
+#        tar -zxf kafka_2.13-2.7.0.tgz
+#        nohup bash kafka_2.13-2.7.0/bin/kafka-server-start.sh kafka_2.13-2.7.0/config/server.properties &
     - name: cache dependencies
       uses: actions/cache@v3
       with:
