--- a/.github/actions/scenarios/tag-transmission/kafka/action.yml
+++ b/.github/actions/scenarios/tag-transmission/kafka/action.yml
@@ -7,6 +7,22 @@ runs:
       uses: ./.github/actions/common/entry
       with:
         log-dir: ./logs/tag-transmission/kafka
+    - name: Set up JDK ${{ env.javaVersion }}
+      uses: actions/setup-java@v3
+      with:
+        java-version: ${{ env.javaVersion }}
+        distribution: 'adopt'
+        cache: maven
+    - name: download zookeeper
+      uses: actions/cache@v3
+      with:
+        path: apache-zookeeper-3.6.3-bin.tar.gz
+        key: ${{ runner.os }}-apache-zookeeper-3.6.3
+    - name: run zookeeper
+      shell: bash
+      run: |
+        tar -zxf apache-zookeeper-3.6.3-bin.tar.gz
+        bash apache-zookeeper-3.6.3-bin/bin/zkServer.sh start apache-zookeeper-3.6.3-bin/conf/zoo_sample.cfg
     - name: package demos
       shell: bash
       run: |
